changed title to TUFF SIMULATOR

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="favicon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="./index.css">
-        <title>Rhythm and Drums</title>
+        <title>TUFF SIMULATOR</title>
     </head>
     <body>
         <div id="header">TUFF SIMULATOR</div>
